src/components/Footer/Footer.module.scss
@use '../../styles/breakpoints.module';
@use '../../styles/colors.module';
@use '../../styles/functions';
@use '../../styles/mixins';

.root {
  overflow: hidden;
  position: relative;
  z-index: 2;
}

.content {
  padding: functions.spacing(4) 0;
}

.logo {
  margin-bottom: functions.spacing(4);
  max-width: 100%;
  width: functions.spacing(25) !important;

  @include mixins.mq(breakpoints.$tablet) {
    margin: functions.spacing(2) 0;
  }

  &:hover,
  &:active,
  &:focus {
    color: colors.$sunshine;
  }
}

.links {
  margin-bottom: functions.spacing(3);

  @include mixins.mq(breakpoints.$tablet) {
    margin: functions.spacing(2) 0;
    text-align: center;
  }
}

.link {
  display: block;
  margin-bottom: functions.spacing(1);

  @include mixins.mq(breakpoints.$tablet) {
    display: inline-block;
    margin: 0 functions.spacing(1) !important;
  }

  a {
    &:hover,
    &:active,
    &:focus {
      color: colors.$sunshine;
      text-decoration: underline 1px dashed currentColor;
      text-underline-offset: functions.spacing(0.5);
    }
  }
}

.iconLinks {
  margin-bottom: functions.spacing(2);
  margin-left: functions.spacing(-2);

  @include mixins.mq(breakpoints.$tablet) {
    margin: functions.spacing(2) 0;
    text-align: right;
  }
}

.iconLink {
  display: inline-block;
  margin-left: functions.spacing(2);

  &:hover,
  &:active,
  &:focus {
    color: colors.$sunshine;
  }
}

.icon {
  fill: currentColor;
  width: functions.spacing(3);
}

.credits {
  font-size: smaller;
  position: relative;

  &::before,
  &::after {
    content: '';
    display: block;
    width: 100%;
    z-index: 1;
  }

  &::before {
    background-attachment: fixed;
    background-image: linear-gradient(
      to right,
      colors.$sunshine functions.spacing(0.5),
      transparent functions.spacing(0.5)
    );
    background-repeat: repeat-x;
    background-size: functions.spacing(2);
    height: functions.spacing(0.5);
    margin-bottom: functions.spacing(4);

    @include mixins.mq(breakpoints.$tablet) {
      margin-bottom: functions.spacing(2);
      margin-inline: -50vw;
      width: 200vw;
    }
  }

  & > * {
    position: relative;
    z-index: 2;
  }

  small {
    opacity: 0.75;
  }
}

.copyright {
  @include mixins.mq(breakpoints.$tablet) {
    text-align: right !important;
  }
}

